--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "halogen": "^0.2.0",
+    "particles.js": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loadingg": "^1.7.2",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
