--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "halogen": "^0.2.0",
+    "mdbreact": "^5.0.2",
     "particles.js": "^2.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-loadingg": "^1.7.2",
     "react-particles-js": "^3.4.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
