--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
+    "d3": "^6.7.0",
+    "font-awesome": "^4.7.0",
     "halogen": "^0.2.0",
-    "mdbreact": "^5.0.2",
+    "mdb-react-ui-kit": "^1.0.0-beta2",
+    "mdbreact": "^4.27.0",
     "particles.js": "^2.0.0",
     "react": "^17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-fontawesome": "^1.7.1",
     "react-loadingg": "^1.7.2",
     "react-particles-js": "^3.4.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-wordcloud": "^1.2.7",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
