--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-wordcloud": "^1.2.7",
+    "recharts": "^2.0.9",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
