--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3": "^6.7.0",
     "font-awesome": "^4.7.0",
     "halogen": "^0.2.0",
+    "material-ui-search-bar": "^1.0.0",
     "mdb-react-ui-kit": "^1.0.0-beta2",
     "mdbreact": "^4.27.0",
     "particles.js": "^2.0.0",
@@ -19,6 +20,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.5",
     "react-fontawesome": "^1.7.1",
     "react-loadingg": "^1.7.2",
     "react-particles-js": "^3.4.1",
