--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "cors": "^2.8.5",
     "d3": "^6.7.0",
     "font-awesome": "^4.7.0",
+    "fotology": "^1.2.2",
     "halogen": "^0.2.0",
     "material-ui-search-bar": "^1.0.0",
     "mdb-react-ui-kit": "^1.0.0-beta2",
     "mdbreact": "^4.27.0",
+    "moment": "^2.29.1",
     "particles.js": "^2.0.0",
+    "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
@@ -23,6 +26,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-fontawesome": "^1.7.1",
     "react-loadingg": "^1.7.2",
+    "react-moment": "^1.1.1",
     "react-particles-js": "^3.4.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
