--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -22,7 +23,7 @@
     "node-sass": "^5.0.0",
     "particles.js": "^2.0.0",
     "re-resizable": "^6.9.0",
-    "react": "^17.0.1",
+    "react": "^16.14.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
@@ -35,7 +36,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tiny-fab": "^4.0.2",
-    "react-typical": "^0.1.3",
+    "react-typing-animation": "^1.6.2",
     "react-wordcloud": "^1.2.7",
     "recharts": "^2.0.9",
     "web-vitals": "^1.1.0"
