--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.5",
     "react-fontawesome": "^1.7.1",
+    "react-grid-system": "^7.1.2",
     "react-loadingg": "^1.7.2",
     "react-moment": "^1.1.1",
     "react-particles-js": "^3.4.1",
@@ -39,6 +40,7 @@
     "react-typing-animation": "^1.6.2",
     "react-wordcloud": "^1.2.7",
     "recharts": "^2.0.9",
+    "vanta": "^0.5.21",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
