--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node-sass": "^5.0.0",
     "particles.js": "^2.0.0",
     "re-resizable": "^6.9.0",
-    "react": "^16.14.0",
+    "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
@@ -36,10 +36,13 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-three-fiber": "^6.0.13",
     "react-tiny-fab": "^4.0.2",
     "react-typing-animation": "^1.6.2",
     "react-wordcloud": "^1.2.7",
     "recharts": "^2.0.9",
+    "three": "^0.128.0",
+    "threejs-meshline": "^2.0.12",
     "vanta": "^0.5.21",
     "web-vitals": "^1.1.0"
   },
