fixed a bunch of stuff and made a new carousle

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "d3": "^6.7.0",
@@ -18,15 +17,15 @@
     "halogen": "^0.2.0",
     "material-ui-search-bar": "^1.0.0",
     "mdb-react-ui-kit": "^1.0.0-beta2",
-    "mdbreact": "^4.27.0",
+    "mdbreact": "^4.14.0",
     "moment": "^2.29.1",
-    "node-sass": "^5.0.0",
     "particles.js": "^2.0.0",
     "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
     "react-elastic-carousel": "^0.11.5",
     "react-fontawesome": "^1.7.1",
     "react-grid-system": "^7.1.2",
@@ -35,15 +34,16 @@
     "react-particles-js": "^3.4.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.8",
+    "react-slick": "^0.28.1",
     "react-three-fiber": "^6.0.13",
     "react-tiny-fab": "^4.0.2",
     "react-typing-animation": "^1.6.2",
     "react-wordcloud": "^1.2.7",
     "recharts": "^2.0.9",
+    "slick-carousel": "^1.8.1",
     "three": "^0.128.0",
     "threejs-meshline": "^2.0.12",
-    "vanta": "^0.5.21",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
