added background, fixed carousle arrows bug

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "font-awesome": "^4.7.0",
     "fotology": "^1.2.2",
     "halogen": "^0.2.0",
-    "material-ui-search-bar": "^1.0.0",
     "mdb-react-ui-kit": "^1.0.0-beta2",
     "mdbreact": "^5.0.2",
     "moment": "^2.29.1",
+    "particles-bg": "^2.5.5",
     "particles.js": "^2.0.0",
     "re-resizable": "^6.9.0",
     "react": "^16.14.0",
@@ -29,6 +29,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-fontawesome": "^1.7.1",
     "react-grid-system": "^7.1.2",
+    "react-loading-overlay": "^1.0.1",
     "react-loadingg": "^1.7.2",
     "react-moment": "^1.1.1",
     "react-particles-js": "^3.4.1",
