--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "mdbreact": "^5.0.2",
     "moment": "^2.29.1",
     "particles-bg": "^2.5.5",
+    "raf": "^3.4.1",
     "re-resizable": "^6.9.0",
     "react": "^16.14.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
+    "react-bubble-chart": "^0.4.0",
     "react-dom": "^16.14.0",
     "react-draggable": "^4.4.3",
     "react-fontawesome": "^1.7.1",
@@ -29,6 +31,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-loadingg": "^1.7.2",
     "react-moment": "^1.1.1",
+    "react-responsive-modal": "^6.1.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
@@ -36,7 +39,9 @@
     "react-tiny-fab": "^4.0.2",
     "react-wordcloud": "^1.2.7",
     "recharts": "^2.0.9",
+    "recompact": "^3.4.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^4.4.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
