--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "bizcharts": "^4.1.11",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "d3": "^6.7.0",
@@ -37,6 +38,7 @@
     "react-scripts": "^2.1.8",
     "react-slick": "^0.28.1",
     "react-tiny-fab": "^4.0.2",
+    "react-tooltip": "^4.2.21",
     "react-wordcloud": "^1.2.7",
     "recharts": "^2.0.9",
     "recompact": "^3.4.0",
