--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "bizcharts": "^4.1.11",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "d3": "^6.7.0",
@@ -40,6 +39,7 @@
     "react-tiny-fab": "^4.0.2",
     "react-tooltip": "^4.2.21",
     "react-wordcloud": "^1.2.7",
+    "reaviz": "^10.3.0",
     "recharts": "^2.0.9",
     "recompact": "^3.4.0",
     "slick-carousel": "^1.8.1",
