--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-slick": "^0.28.1",
     "react-tiny-fab": "^4.0.2",
     "react-tooltip": "^4.2.21",
+    "react-tooltip-lite": "^1.12.0",
     "react-wordcloud": "^1.2.7",
     "reaviz": "^10.3.0",
     "recharts": "^2.0.9",
