--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-loadingg": "^1.7.2",
     "react-moment": "^1.1.1",
     "react-responsive-modal": "^6.1.0",
+    "react-responsive-tooltip": "^1.0.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
